err/arvados-pam.err
Listing '.'...
Listing './bin'...
Listing './data'...
Listing './data/lib'...
Listing './data/lib/security'...
Compiling './data/lib/security/libpam_arvados.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/apiclient'...
Listing './lib/python3.5/site-packages/arvados'...
Listing './lib/python3.5/site-packages/arvados/commands'...
Listing './lib/python3.5/site-packages/arvados_pam'...
Compiling './lib/python3.5/site-packages/arvados_pam/__init__.py'...
***   File "./lib/python3.5/site-packages/arvados_pam/__init__.py", line 20
    except pamh.exception, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arvados_pam-0.1.20171208184747.egg-info'...
Listing './lib/python3.5/site-packages/arvados_python_client-0.1.20171211211613.egg-info'...
Listing './lib/python3.5/site-packages/ciso8601-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/google_api_python_client-1.6.4.dist-info'...
Listing './lib/python3.5/site-packages/googleapiclient'...
Listing './lib/python3.5/site-packages/googleapiclient/discovery_cache'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/oauth2client'...
Listing './lib/python3.5/site-packages/oauth2client/contrib'...
Listing './lib/python3.5/site-packages/oauth2client/contrib/django_util'...
Listing './lib/python3.5/site-packages/oauth2client-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.43.0.1.egg-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/performance'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ws4py'...
Listing './lib/python3.5/site-packages/ws4py/client'...
Listing './lib/python3.5/site-packages/ws4py/server'...
Listing './lib/python3.5/site-packages/ws4py-0.3.5.dist-info'...
Listing './lib/security'...
Compiling './lib/security/libpam_arvados.py'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/arvados-pam'...
Listing './share/doc/arvados-pam/examples'...
Listing './share/doc/arvados-python-client'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_buffer.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real_fancy.py'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/smtp.py'...
Compiling './share/doc/pycurl/examples/ssh_keyfunction.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
Listing './share/pam-configs'...
Listing './share/python-wheels'...
